tests/snapshots/schema_snapshots__schema_agent_scheme.snap
---
source: tests/schema_snapshots.rs
expression: "schemas_for(\"<agent>\")"
---
{
  "append_diary_entry": {
    "description": "Append a timestamped section to today's diary file for the active scope. Accepts an optional `title` for the entry heading.",
    "input_schema": {
      "additionalProperties": false,
      "properties": {
        "agent": {
          "description": "Scope key 'agent' identifying the caller.",
          "minLength": 1,
          "type": "string"
        },
        "content": {
          "description": "The diary entry body.",
          "type": "string"
        },
        "title": {
          "description": "Optional short title for the entry; when present the heading reads\n`## <HH:MM:SS> — <title>`, otherwise `## <HH:MM:SS>`.",
          "type": [
            "string",
            "null"
          ]
        }
      },
      "required": [
        "agent",
        "content"
      ],
      "type": "object"
    }
  },
  "delete_memory_note": {
    "description": "Delete a single memory note by its virtual path.",
    "input_schema": {
      "additionalProperties": false,
      "properties": {
        "agent": {
          "description": "Scope key 'agent' identifying the caller.",
          "minLength": 1,
          "type": "string"
        },
        "path": {
          "description": "The virtual path of the note, relative to the vault root.",
          "type": "string"
        }
      },
      "required": [
        "agent",
        "path"
      ],
      "type": "object"
    }
  },
  "edit_memory_note": {
    "description": "Replace the unique occurrence of a search string in a note and persist atomically.",
    "input_schema": {
      "additionalProperties": false,
      "properties": {
        "agent": {
          "description": "Scope key 'agent' identifying the caller.",
          "minLength": 1,
          "type": "string"
        },
        "path": {
          "description": "The virtual path of the note, relative to the vault root.",
          "type": "string"
        },
        "replace_string": {
          "description": "The replacement string.",
          "type": "string"
        },
        "search_string": {
          "description": "The exact string to replace. It must occur exactly once in the file.",
          "type": "string"
        }
      },
      "required": [
        "agent",
        "path",
        "search_string",
        "replace_string"
      ],
      "type": "object"
    }
  },
  "evolve_core_persona": {
    "description": "Atomically replace one foundational session file (persona|prompt|rules|user|memory) selected by `which`. Enforces caps: USER.md ≤ 100 lines, MEMORY.md ≤ 200 lines.",
    "input_schema": {
      "additionalProperties": false,
      "properties": {
        "agent": {
          "description": "Scope key 'agent' identifying the caller.",
          "minLength": 1,
          "type": "string"
        },
        "content": {
          "description": "The full new contents of the selected file. `user` content must be ≤ 100\nlines and `memory` content ≤ 200 lines.",
          "type": "string"
        },
        "which": {
          "description": "Which foundational file to replace: one of persona, prompt, rules, user, memory.",
          "enum": [
            "persona",
            "prompt",
            "rules",
            "user",
            "memory"
          ],
          "type": "string"
        }
      },
      "required": [
        "agent",
        "which",
        "content"
      ],
      "type": "object"
    }
  },
  "list_memory_notes": {
    "description": "List the virtual paths of memory notes visible to the given scope, with pagination.",
    "input_schema": {
      "additionalProperties": false,
      "properties": {
        "agent": {
          "description": "Scope key 'agent' identifying the caller.",
          "minLength": 1,
          "type": "string"
        },
        "cursor": {
          "default": null,
          "description": "Opaque pagination cursor returned by a previous call.",
          "type": [
            "string",
            "null"
          ]
        },
        "glob": {
          "default": null,
          "description": "Optional glob pattern matched against each entry's clean, vault-root-relative\nvirtual path (e.g. `Agents/diary/2026-*`, `**/release.md`). Supports `*`, `**`,\n`?`, and character classes. Composes with `path_prefix` via AND (both must\nmatch). Filters paths only; reads no note contents.",
          "type": [
            "string",
            "null"
          ]
        },
        "limit": {
          "default": null,
          "description": "Maximum number of entries to return (default 200, maximum 1000).",
          "format": "uint64",
          "minimum": 0,
          "type": [
            "integer",
            "null"
          ]
        },
        "order": {
          "default": null,
          "description": "Optional ordering of results by clean virtual path: `name_asc` (the\ndefault) returns ascending path order; `name_desc` returns descending.\nOrdering is applied before pagination, so `limit`/`cursor` page over the\nordered set.",
          "type": [
            "string",
            "null"
          ]
        },
        "path_prefix": {
          "default": null,
          "description": "Optional virtual-path prefix, relative to the agents folder, to filter by.",
          "type": [
            "string",
            "null"
          ]
        },
        "view": {
          "default": null,
          "description": "Optional selector for what the items represent: `files` (the default)\nreturns individual note virtual paths; `dirs` returns the distinct\ndirectory virtual paths derived from the visible set — every ancestor\ndirectory of a visible note, deduplicated and deterministically ordered.\nThe `dirs` view honors `path_prefix`/`glob` and pagination and reads no\nnote contents.",
          "type": [
            "string",
            "null"
          ]
        }
      },
      "required": [
        "agent"
      ],
      "type": "object"
    }
  },
  "load_session_context": {
    "description": "Render the session-context for the active scope: the foundational files woven into the configured template with a memory-tools guide. Returns { rendered, missing }.",
    "input_schema": {
      "additionalProperties": false,
      "properties": {
        "agent": {
          "description": "Scope key 'agent' identifying the caller.",
          "minLength": 1,
          "type": "string"
        }
      },
      "required": [
        "agent"
      ],
      "type": "object"
    }
  },
  "read_memory_note": {
    "description": "Read the UTF-8 contents of a single memory note by its virtual path.",
    "input_schema": {
      "additionalProperties": false,
      "properties": {
        "agent": {
          "description": "Scope key 'agent' identifying the caller.",
          "minLength": 1,
          "type": "string"
        },
        "path": {
          "description": "The virtual path of the note, relative to the vault root.",
          "type": "string"
        }
      },
      "required": [
        "agent",
        "path"
      ],
      "type": "object"
    }
  },
  "update_task_heartbeat": {
    "description": "Atomically replace the scope's HEARTBEAT.md.",
    "input_schema": {
      "additionalProperties": false,
      "properties": {
        "agent": {
          "description": "Scope key 'agent' identifying the caller.",
          "minLength": 1,
          "type": "string"
        },
        "content": {
          "description": "The content to write.",
          "type": "string"
        }
      },
      "required": [
        "agent",
        "content"
      ],
      "type": "object"
    }
  },
  "write_memory_note": {
    "description": "Atomically write the full contents of a memory note at the given virtual path.",
    "input_schema": {
      "additionalProperties": false,
      "properties": {
        "agent": {
          "description": "Scope key 'agent' identifying the caller.",
          "minLength": 1,
          "type": "string"
        },
        "content": {
          "description": "The full new contents of the note.",
          "type": "string"
        },
        "path": {
          "description": "The virtual path of the note, relative to the vault root.",
          "type": "string"
        }
      },
      "required": [
        "agent",
        "path",
        "content"
      ],
      "type": "object"
    }
  }
}
