tests/snapshots/schema_snapshots__schema_agent_user_scheme.snap
---
source: tests/schema_snapshots.rs
expression: "schemas_for(\"<agent>.<user>\")"
---
{
  "append_diary_entry": {
    "description": "Append a timestamped section to today's diary file for the active scope. Accepts an optional `title` for the entry heading.",
    "input_schema": {
      "additionalProperties": false,
      "properties": {
        "agent": {
          "description": "Scope key 'agent' identifying the caller.",
          "minLength": 1,
          "type": "string"
        },
        "content": {
          "description": "The diary entry body.",
          "type": "string"
        },
        "title": {
          "description": "Optional short title for the entry; when present the heading reads\n`## <HH:MM:SS> — <title>`, otherwise `## <HH:MM:SS>`.",
          "type": [
            "string",
            "null"
          ]
        },
        "user": {
          "description": "Scope key 'user' identifying the caller.",
          "minLength": 1,
          "type": "string"
        }
      },
      "required": [
        "agent",
        "user",
        "content"
      ],
      "type": "object"
    }
  },
  "delete_memory_note": {
    "description": "Delete a single memory note by its virtual path.",
    "input_schema": {
      "additionalProperties": false,
      "properties": {
        "agent": {
          "description": "Scope key 'agent' identifying the caller.",
          "minLength": 1,
          "type": "string"
        },
        "path": {
          "description": "The virtual path of the note, relative to the vault root.",
          "type": "string"
        },
        "user": {
          "description": "Scope key 'user' identifying the caller.",
          "minLength": 1,
          "type": "string"
        }
      },
      "required": [
        "agent",
        "user",
        "path"
      ],
      "type": "object"
    }
  },
  "edit_memory_note": {
    "description": "Replace the unique occurrence of a search string in a note and persist atomically.",
    "input_schema": {
      "additionalProperties": false,
      "properties": {
        "agent": {
          "description": "Scope key 'agent' identifying the caller.",
          "minLength": 1,
          "type": "string"
        },
        "path": {
          "description": "The virtual path of the note, relative to the vault root.",
          "type": "string"
        },
        "replace_string": {
          "description": "The replacement string.",
          "type": "string"
        },
        "search_string": {
          "description": "The exact string to replace. It must occur exactly once in the file.",
          "type": "string"
        },
        "user": {
          "description": "Scope key 'user' identifying the caller.",
          "minLength": 1,
          "type": "string"
        }
      },
      "required": [
        "agent",
        "user",
        "path",
        "search_string",
        "replace_string"
      ],
      "type": "object"
    }
  },
  "evolve_core_persona": {
    "description": "Atomically replace one foundational session file (persona|prompt|rules|user|memory) selected by `which`. Enforces caps: USER.md ≤ 100 lines, MEMORY.md ≤ 200 lines.",
    "input_schema": {
      "additionalProperties": false,
      "properties": {
        "agent": {
          "description": "Scope key 'agent' identifying the caller.",
          "minLength": 1,
          "type": "string"
        },
        "content": {
          "description": "The full new contents of the selected file. `user` content must be ≤ 100\nlines and `memory` content ≤ 200 lines.",
          "type": "string"
        },
        "user": {
          "description": "Scope key 'user' identifying the caller.",
          "minLength": 1,
          "type": "string"
        },
        "which": {
          "description": "Which foundational file to replace: one of persona, prompt, rules, user, memory.",
          "enum": [
            "persona",
            "prompt",
            "rules",
            "user",
            "memory"
          ],
          "type": "string"
        }
      },
      "required": [
        "agent",
        "user",
        "which",
        "content"
      ],
      "type": "object"
    }
  },
  "list_memory_notes": {
    "description": "List the virtual paths of memory notes visible to the given scope, with pagination.",
    "input_schema": {
      "additionalProperties": false,
      "properties": {
        "agent": {
          "description": "Scope key 'agent' identifying the caller.",
          "minLength": 1,
          "type": "string"
        },
        "cursor": {
          "default": null,
          "description": "Opaque pagination cursor returned by a previous call.",
          "type": [
            "string",
            "null"
          ]
        },
        "glob": {
          "default": null,
          "description": "Optional glob pattern matched against each entry's clean, vault-root-relative\nvirtual path (e.g. `Agents/diary/2026-*`, `**/release.md`). Supports `*`, `**`,\n`?`, and character classes. Composes with `path_prefix` via AND (both must\nmatch). Filters paths only; reads no note contents.",
          "type": [
            "string",
            "null"
          ]
        },
        "limit": {
          "default": null,
          "description": "Maximum number of entries to return (default 200, maximum 1000).",
          "format": "uint64",
          "minimum": 0,
          "type": [
            "integer",
            "null"
          ]
        },
        "order": {
          "default": null,
          "description": "Optional ordering of results by clean virtual path: `name_asc` (the\ndefault) returns ascending path order; `name_desc` returns descending.\nOrdering is applied before pagination, so `limit`/`cursor` page over the\nordered set.",
          "type": [
            "string",
            "null"
          ]
        },
        "path_prefix": {
          "default": null,
          "description": "Optional virtual-path prefix, relative to the agents folder, to filter by.",
          "type": [
            "string",
            "null"
          ]
        },
        "user": {
          "description": "Scope key 'user' identifying the caller.",
          "minLength": 1,
          "type": "string"
        },
        "view": {
          "default": null,
          "description": "Optional selector for what the items represent: `files` (the default)\nreturns individual note virtual paths; `dirs` returns the distinct\ndirectory virtual paths derived from the visible set — every ancestor\ndirectory of a visible note, deduplicated and deterministically ordered.\nThe `dirs` view honors `path_prefix`/`glob` and pagination and reads no\nnote contents.",
          "type": [
            "string",
            "null"
          ]
        }
      },
      "required": [
        "agent",
        "user"
      ],
      "type": "object"
    }
  },
  "load_session_context": {
    "description": "Render the session-context for the active scope: the foundational files woven into the configured template with a memory-tools guide. Returns { rendered, missing }.",
    "input_schema": {
      "additionalProperties": false,
      "properties": {
        "agent": {
          "description": "Scope key 'agent' identifying the caller.",
          "minLength": 1,
          "type": "string"
        },
        "user": {
          "description": "Scope key 'user' identifying the caller.",
          "minLength": 1,
          "type": "string"
        }
      },
      "required": [
        "agent",
        "user"
      ],
      "type": "object"
    }
  },
  "read_memory_note": {
    "description": "Read the UTF-8 contents of a single memory note by its virtual path. Optional `offset`/`limit` select a 1-based line range and add `total_lines` (the full note's line count) to the result. Set `backlinks` to also return the visible notes whose links resolve to it.",
    "input_schema": {
      "additionalProperties": false,
      "properties": {
        "agent": {
          "description": "Scope key 'agent' identifying the caller.",
          "minLength": 1,
          "type": "string"
        },
        "backlinks": {
          "description": "When `true`, the structured result additionally carries a `backlinks`\narray: the clean virtual path of every visible note containing at least\none link that resolves to this note, deduplicated and sorted ascending.\nAbsent or `false` leaves the response unchanged.",
          "type": [
            "boolean",
            "null"
          ]
        },
        "limit": {
          "description": "Optional maximum number of lines to return, counted from `offset`\n(default: all remaining lines).",
          "format": "uint64",
          "minimum": 1,
          "type": [
            "integer",
            "null"
          ]
        },
        "offset": {
          "description": "Optional 1-based line number of the first returned line (default 1).\nWhen `offset` or `limit` is supplied, the structured result additionally\ncarries `total_lines` — the line count of the full note — and an offset\npast the last line returns empty content rather than an error.",
          "format": "uint64",
          "minimum": 1,
          "type": [
            "integer",
            "null"
          ]
        },
        "path": {
          "description": "The virtual path of the note, relative to the vault root.",
          "type": "string"
        },
        "user": {
          "description": "Scope key 'user' identifying the caller.",
          "minLength": 1,
          "type": "string"
        }
      },
      "required": [
        "agent",
        "user",
        "path"
      ],
      "type": "object"
    }
  },
  "read_memory_notes": {
    "description": "Read up to 20 memory notes in one call. Each `paths` entry is a virtual path string (whole note) or `{ path, offset?, limit? }` requesting a line range plus `total_lines`. Returns one `notes` entry per requested path, in request order: `{ path, content }` on success or `{ path, error: { code, message } }` on failure. Per-path failures do not fail the call.",
    "input_schema": {
      "additionalProperties": false,
      "properties": {
        "agent": {
          "description": "Scope key 'agent' identifying the caller.",
          "minLength": 1,
          "type": "string"
        },
        "paths": {
          "description": "1 to 20 entries, each either a vault-root-relative virtual path string\n(the whole note) or an object `{ path, offset?, limit? }` requesting a\nline range of that note. The result carries one `notes` entry per\nrequested path, in request order: `{ path, content }` on success or\n`{ path, error: { code, message } }` on failure, plus `total_lines` when\na range was requested. Per-path failures (e.g. `not_found`,\n`path_not_permitted`) do not fail the call.",
          "items": {
            "anyOf": [
              {
                "description": "A virtual path, relative to the vault root; the whole note is returned.",
                "type": "string"
              },
              {
                "description": "A path with an optional line range, with the same `offset`/`limit`\nsemantics as `read_memory_note`; the entry's result additionally carries\n`total_lines`.",
                "properties": {
                  "limit": {
                    "description": "Maximum number of lines to return (default: all remaining lines).",
                    "format": "uint64",
                    "minimum": 1,
                    "type": [
                      "integer",
                      "null"
                    ]
                  },
                  "offset": {
                    "description": "1-based line number of the first returned line.",
                    "format": "uint64",
                    "minimum": 1,
                    "type": [
                      "integer",
                      "null"
                    ]
                  },
                  "path": {
                    "description": "The virtual path of the note, relative to the vault root.",
                    "type": "string"
                  }
                },
                "required": [
                  "path"
                ],
                "type": "object"
              }
            ],
            "description": "One `read_memory_notes` entry: a bare virtual path (the whole note) or an\nobject requesting a line range of that note."
          },
          "type": "array"
        },
        "user": {
          "description": "Scope key 'user' identifying the caller.",
          "minLength": 1,
          "type": "string"
        }
      },
      "required": [
        "agent",
        "user",
        "paths"
      ],
      "type": "object"
    }
  },
  "read_note_properties": {
    "description": "Read a note's frontmatter properties as a JSON object in `{ properties }`. Absent or malformed frontmatter yields an empty object.",
    "input_schema": {
      "additionalProperties": false,
      "properties": {
        "agent": {
          "description": "Scope key 'agent' identifying the caller.",
          "minLength": 1,
          "type": "string"
        },
        "path": {
          "description": "The virtual path of the note, relative to the vault root.",
          "type": "string"
        },
        "user": {
          "description": "Scope key 'user' identifying the caller.",
          "minLength": 1,
          "type": "string"
        }
      },
      "required": [
        "agent",
        "user",
        "path"
      ],
      "type": "object"
    }
  },
  "rename_memory_note": {
    "description": "Move a single note from `path` to `new_path`, rewriting every visible incoming link (decorations preserved) to resolve to the new location. The destination must not already exist.",
    "input_schema": {
      "additionalProperties": false,
      "properties": {
        "agent": {
          "description": "Scope key 'agent' identifying the caller.",
          "minLength": 1,
          "type": "string"
        },
        "new_path": {
          "description": "The destination virtual path, relative to the vault root. Must not\nalready name an existing note.",
          "type": "string"
        },
        "path": {
          "description": "The current virtual path of the note, relative to the vault root.",
          "type": "string"
        },
        "user": {
          "description": "Scope key 'user' identifying the caller.",
          "minLength": 1,
          "type": "string"
        }
      },
      "required": [
        "agent",
        "user",
        "path",
        "new_path"
      ],
      "type": "object"
    }
  },
  "update_note_properties": {
    "description": "Merge a JSON object into a note's frontmatter atomically: each key is upserted, an explicit `null` deletes a key, and the note body is untouched. The block is created when absent, removed when the merge empties it, and re-serialized in normalized form (stable key order; comments and formatting are not preserved). Returns the full post-update `{ properties }`.",
    "input_schema": {
      "additionalProperties": false,
      "properties": {
        "agent": {
          "description": "Scope key 'agent' identifying the caller.",
          "minLength": 1,
          "type": "string"
        },
        "path": {
          "description": "The virtual path of the note, relative to the vault root. The note must\nalready exist.",
          "type": "string"
        },
        "properties": {
          "additionalProperties": true,
          "description": "The properties to merge into the note's frontmatter. Each key is upserted\nwith its JSON value (strings, numbers, booleans, arrays, and nested\nobjects round-trip); a key supplied with an explicit `null` is deleted.",
          "type": "object"
        },
        "user": {
          "description": "Scope key 'user' identifying the caller.",
          "minLength": 1,
          "type": "string"
        }
      },
      "required": [
        "agent",
        "user",
        "path",
        "properties"
      ],
      "type": "object"
    }
  },
  "update_task_heartbeat": {
    "description": "Atomically replace the scope's HEARTBEAT.md.",
    "input_schema": {
      "additionalProperties": false,
      "properties": {
        "agent": {
          "description": "Scope key 'agent' identifying the caller.",
          "minLength": 1,
          "type": "string"
        },
        "content": {
          "description": "The content to write.",
          "type": "string"
        },
        "user": {
          "description": "Scope key 'user' identifying the caller.",
          "minLength": 1,
          "type": "string"
        }
      },
      "required": [
        "agent",
        "user",
        "content"
      ],
      "type": "object"
    }
  },
  "write_memory_note": {
    "description": "Atomically write the full contents of a memory note at the given virtual path.",
    "input_schema": {
      "additionalProperties": false,
      "properties": {
        "agent": {
          "description": "Scope key 'agent' identifying the caller.",
          "minLength": 1,
          "type": "string"
        },
        "append": {
          "description": "When `true`, `content` is appended to the existing note verbatim —\nexact bytes, no implicit separator — and a missing note is created with\n`content` as its full body. Absent or `false` replaces the whole note.",
          "type": [
            "boolean",
            "null"
          ]
        },
        "content": {
          "description": "The full new contents of the note; with `append: true`, the bytes to\nappend instead.",
          "type": "string"
        },
        "path": {
          "description": "The virtual path of the note, relative to the vault root.",
          "type": "string"
        },
        "user": {
          "description": "Scope key 'user' identifying the caller.",
          "minLength": 1,
          "type": "string"
        }
      },
      "required": [
        "agent",
        "user",
        "path",
        "content"
      ],
      "type": "object"
    }
  }
}
