tests/snapshots/schema_snapshots__schema_recall_tool.snap
---
source: tests/schema_snapshots.rs
expression: "recall_schema_for(\"<agent>.<user>\")"
---
{
  "description": "Search memory notes by content within the caller's visible set. Returns ranked hits as { path, score (0-1), snippets, modified_at }. Supply at least one of `query` (full-text), `regex`, `filters` (frontmatter properties; tantivy backend only), or the `modified_after`/`modified_before` time bounds. With time bounds alone, hits are ordered by recency. Paginated like list_memory_notes.",
  "input_schema": {
    "additionalProperties": false,
    "properties": {
      "agent": {
        "description": "Scope key 'agent' identifying the caller.",
        "minLength": 1,
        "type": "string"
      },
      "cursor": {
        "description": "Opaque pagination cursor returned by a previous call.",
        "type": [
          "string",
          "null"
        ]
      },
      "filters": {
        "description": "Frontmatter property filters. Requires the tantivy backend; rejected with\n`unsupported` on the simple backend.",
        "items": {
          "description": "One frontmatter property predicate (tantivy backend only).",
          "properties": {
            "key": {
              "description": "The frontmatter property key.",
              "type": "string"
            },
            "op": {
              "description": "The comparison: exists, eq, contains, gt, lt, ge, le.",
              "enum": [
                "exists",
                "eq",
                "contains",
                "gt",
                "lt",
                "ge",
                "le"
              ],
              "type": "string"
            },
            "value": {
              "description": "The value to compare against (omitted for `exists`).",
              "type": [
                "string",
                "null"
              ]
            }
          },
          "required": [
            "key",
            "op"
          ],
          "type": "object"
        },
        "type": [
          "array",
          "null"
        ]
      },
      "limit": {
        "description": "Maximum number of hits to return (default 200, maximum 1000).",
        "format": "uint64",
        "minimum": 0,
        "type": [
          "integer",
          "null"
        ]
      },
      "modified_after": {
        "description": "Include only notes modified at or after this time. Accepts an RFC 3339\ntimestamp, or a bare `YYYY-MM-DD` date interpreted as start of day in the\nconfigured `AGENTMEM_TIMEZONE`. Bounds are half-open\n(`modified_after ≤ mtime < modified_before`) and compare the filesystem\nmtime, which restores and sync tools may have back-dated. Counts as a\nsufficient predicate on its own: with no `query`/`regex`/`filters`, hits\nare ordered by `modified_at` descending with `score: 1.0` and empty\n`snippets`.",
        "type": [
          "string",
          "null"
        ]
      },
      "modified_before": {
        "description": "Include only notes modified strictly before this time. Same accepted\nformats, half-open semantics, and mtime caveat as `modified_after`.",
        "type": [
          "string",
          "null"
        ]
      },
      "path_prefix": {
        "description": "Optional virtual-path prefix, relative to the agents folder, to filter by.",
        "type": [
          "string",
          "null"
        ]
      },
      "query": {
        "description": "Full-text query. On the simple backend this is a case-insensitive\nsubstring match; on the tantivy backend it is BM25-ranked.",
        "type": [
          "string",
          "null"
        ]
      },
      "regex": {
        "description": "Regular-expression query matched over note content.",
        "type": [
          "string",
          "null"
        ]
      },
      "user": {
        "description": "Scope key 'user' identifying the caller.",
        "minLength": 1,
        "type": "string"
      }
    },
    "required": [
      "agent",
      "user"
    ],
    "type": "object"
  }
}
